--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     padding: 0px;
     display: grid;
     height: 100%;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 5fr;;
 }
 
@@ -116,6 +116,10 @@ img.icon.pp{
     align-self: center;
 }
 
+.info{
+    display: grid;
+}
+
 .info > p > img.icon{
     width: 35px;         /* largeur fixe */
     height: 35px;        /* hauteur fixe */
@@ -126,20 +130,120 @@ img.icon.pp{
 .info > p{
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: repeat(3, 55px);
+    grid-template-columns: 55px 55px 110px;
     gap: 10px;
     align-items: center;
 }
 
 .content{
     display: grid;
+    grid-template-columns: 4fr 1fr;
+    gap: 8px;
+    padding: 16px;
 }
 
 .main{
     display: grid;
     gap: 32px;
+    grid-template-columns: 1fr 1fr;
+    padding: 16px;
+}
+
+.main > h3{
+    grid-column: 1/3;
+    margin: 0px;
+    position: relative;
+    top: 18px;
+}
+
+.side-content > h3.push{
+    position: relative;
+    top: 8px;
 }
 
 .card{
     border: 1px solid black;
+    display: grid;
+    grid-template-rows: 2fr 1fr;
+    padding: 16px;
+    border-left: 8px solid #b58332; 
+    background-color: white;
+    border-radius: 6px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.card > p > img{
+    height: 20px;
+}
+
+.card > p{
+   justify-self: end;
+   margin-bottom: 0px;
+}
+
+.card-ann{
+    border: 1px solid black;
+    padding: 16px;
+    margin-right: 16px;
+}
+
+.card-trending{
+    border: 1px solid black;
+    margin-right: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.card-trending > ul{
+    padding: 0px;
+}
+
+
+.profil-desc{
+    font-size: 10px;
+}
+
+.icon.rounder{
+    width: 35px;         
+    height: 35px;        
+    border-radius: 50%;   
+}
+
+.icon.rounder:not(.original){ 
+    object-fit: cover;    
+}
+
+.card-ann, .card-trending{
+    background-color: white;
+    border-radius: 6px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.card-trending > ul > li > div > h6{
+    margin: 0px;
+}
+
+.card-trending > ul > li > div > p{
+    margin: 0px;
+}
+
+.card-trending > ul > li{
+    margin: 8px;
+    margin-bottom: 16px;
+}
+
+ul.grp-2{
+    align-items: start;
+}
+
+button{
+    border-radius: 15px;
+    width: 75px;
+    height: 35px;
+    color: white;
+    background-color: #84683dcf;
+}
+
+button:hover{
+    background-color: #916a30cf;
 }
